@@ -1,3 +1,8 @@
+Mon Jan 20 20:20:27 2014  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c: Use preprocessor macros to avoid repeated
+	  conditionals.
+
 Mon Jan 20 13:55:03 2014  Zachary Scott  <e@zzak.io>
 
 	* lib/rubygems/version.rb: [DOC] Use gender-neutral pronouns [ci skip]
